# DataCollector

./: CMakeLists.txt  DataCollector.cpp  DataCollector.hpp  File.cpp  File.hpp  README.md  Util.cpp  Util.hpp  main.cpp
Testing/: collectorTest.cpp  componentTest.cpp  fileTest.cpp  regexTest.cpp
